--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,19 @@ repositories {
 }
 
 def selenideVersion = "5.20.1",
+    poiVersion = "4.1.2",
     junitVersion = "5.7.1"
 
 dependencies {
-    testImplementation (
+    testImplementation(
             "com.codeborne:selenide:$selenideVersion",
             "com.codeborne:pdf-test:1.5.1",
             "com.codeborne:xls-test:1.4.3",
             "net.lingala.zip4j:zip4j:1.3.2",
             "org.hamcrest:hamcrest-all:1.3",
+            "org.apache.poi:poi-scratchpad:$poiVersion",
+            "org.apache.poi:poi-ooxml:$poiVersion",
+            "org.apache.poi:poi:$poiVersion",
             "org.junit.jupiter:junit-jupiter-api:$junitVersion")
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
